@@ -4,6 +4,9 @@
 + Added new CSS element "poem_epigraph" for poem's epigraphs, to destinguish from regular text epigraphs, so they can be styled differently
 * Fixed converter dropping the "strikethrough" tag text
 * Fixed converting of poem subtitles
+* If parfagraph at the start of the section starts with image, we assume it's a "drop" image and do not create a drop character afterwards
+* Fixed case of incorrect display when paragraph starts from link and Drop is enabled
+
 
 1.1.0
 (Major revoke)
